# kraken_sockets

./: .gitignore  README.md  demo.py  demo_server.py  pyproject.toml  setup_env.py
src/kraken_sockets/: .env.example  api.py  mcp_server.py
src/kraken_sockets/analytics/: __init__.py  engine.py
src/kraken_sockets/controls/: __init__.py  routes.py  server.py
src/kraken_sockets/schema/requests/: __init__.py  admin_requests.py  base_requests.py  market_data_requests.py  trading_requests.py  user_data_requests.py
src/kraken_sockets/schema/responses/: __init__.py  admin_responses.py  market_data_responses.py  subscription_responses.py  trading_responses.py  user_data_responses.py
