[project]
name = "kraken-sockets"
version = "0.1.2"
description = "Easy Kraken Websockets. Just wrap your triggers and build."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.0",
    "loguru>=0.7.3",
    "python-dotenv>=1.1.1",
    "requests>=2.32.5",
    "uvicorn>=0.34.0",
    "websockets>=15.0.1",
]
